добавлена секция hero

--- a/index.html
+++ b/index.html
@@ -1,13 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stud.io</title>
-    <link src="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <section class="hero">
+        <header>
+            <div class="container">
+                <div class="header">
+                    <a href="#" class="header__logo">
+                        <img src="./img/logo.svg" alt="Logo">
+                    </a>
+                    <nav class="header__nav">
+                        <a href="#" class="header__link">Home</a>
+                        <a href="" class="header__link">About</a>
+                        <a href="" class="header__link">Service</a>
+                        <a href="" class="header__link">Portfolio</a>
+                        <a href="" class="header__link">Blog</a>
+                    </nav>
+                    <button class="header__btn" type="button">Contact Us</button>
+                </div>
+            </div>
+        </header>
+        <div class="hero__info">
+            <div class="container">
+                <p class="hero__text">Hi, There!</p>
+                <h1 class="hero__title">We are a growing-up Creative Agency from Indonesia!
+                </h1>
+                <p class="hero__text">We provides you with modest and professional design templates that come from the
+                    synergy of design and technology</p>
+                    <a href="#" class="hero__link">Let’s Collaborate</a>
+            </div>
+        </div>
+        <div class="hero__services">
+            <div class="container">
+                <div class="services">
+                    <div class="services__col">
+                        <img src="./img/icon-web-design.svg" alt="Web design">
+                        <h2 class="services__title">Web Design Projects</h2>
+                        <p class="sevices__text">Make your website user friendly and look more professional
+                        </p>
+                    </div>
+                    <div class="services__col">
+                        <img src="./img/icon-social-media.svg" alt="Social media">
+                        <h2 class="services__title">Web Design Projects</h2>
+                        <p class="sevices__text">Make your website user friendly and look more professional
+                        </p>
+                    </div>
+                    <div class="services__col">
+                        <img src="./img/icon-digital.svg" alt="Digital artwork">
+                        <h2 class="services__title">Web Design Projects</h2>
+                        <p class="sevices__text">Make your website user friendly and look more professional
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
+
 </html>
