--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
     <section class="hero">
+        <div class="hero__banner">
+            <div class="banner">
+                <img src="./img/bg.png" alt="Background" class="banner__img">
+            </div>
+        </div>
         <header>
             <div class="container">
                 <div class="header">
@@ -28,35 +33,35 @@
                 </div>
             </div>
         </header>
-        <div class="hero__info">
-            <div class="container">
+        <div class="container">
+            <div class="hero__info">
                 <p class="hero__text">Hi, There!</p>
                 <h1 class="hero__title">We are a growing-up Creative Agency from Indonesia!
                 </h1>
                 <p class="hero__text">We provides you with modest and professional design templates that come from the
                     synergy of design and technology</p>
-                    <a href="#" class="hero__link">Let’s Collaborate</a>
+                <a href="#" class="hero__link">Let’s Collaborate</a>
+
             </div>
-        </div>
-        <div class="hero__services">
-            <div class="container">
+            <div class="hero__services">
                 <div class="services">
                     <div class="services__col">
                         <img src="./img/icon-web-design.svg" alt="Web design">
                         <h2 class="services__title">Web Design Projects</h2>
-                        <p class="sevices__text">Make your website user friendly and look more professional
+                        <p class="services__text">Make your website user friendly and look more professional
                         </p>
                     </div>
                     <div class="services__col">
                         <img src="./img/icon-social-media.svg" alt="Social media">
-                        <h2 class="services__title">Web Design Projects</h2>
-                        <p class="sevices__text">Make your website user friendly and look more professional
+                        <h2 class="services__title">Social Media Templates</h2>
+                        <p class="services__text">Gain more followers or subscribers with the right template
+
                         </p>
                     </div>
                     <div class="services__col">
                         <img src="./img/icon-digital.svg" alt="Digital artwork">
-                        <h2 class="services__title">Web Design Projects</h2>
-                        <p class="sevices__text">Make your website user friendly and look more professional
+                        <h2 class="services__title">Digital Artwork</h2>
+                        <p class="services__text">Complete your digital work with appropriate artwork
                         </p>
                     </div>
 
