Добавила блок со слайдером и закончила проект

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stud.io</title>
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -64,12 +65,107 @@
                         <p class="services__text">Complete your digital work with appropriate artwork
                         </p>
                     </div>
-
                 </div>
             </div>
-
         </div>
     </section>
+    <section class="feedback">
+        <div class="container">
+            <div class="heading">
+                <div class="heading__left">
+                    <p class="description">Testimonial</p>
+                    <h2 class="title">What Our Customer Say</h2>
+                </div>
+                <div class="heading__right">
+                    <div class="swiper-button-prev">
+                        <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13.5 6.46484L1.5 6.46484" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M6.5 11.4648L1.5 6.46484L6.5 1.46484" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <div class="swiper-button-next">
+                        <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.5 6.46484H13.5" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M8.5 1.46484L13.5 6.46484L8.5 11.4648" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper swiperFeedback">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="swiper-slide__head">
+                            <img src="./img/user1.png" alt="Kathleen Smith" class="swiper-slide__foto">
+                            <div class="swiper-slider__info">
+                                <p class="swiper-slider__autor">Kathleen Smith</p>
+                                <p class="swiper-slider__role">Fuel Company</p>
+                            </div>
+                            <img src="./img/quote.svg" alt="Quote">
+                        </div>
+                        <p class="swiper-slide__text">I recently worked with Stud.io on developing a new website for my
+                            business, and I have to say, I am thoroughly impressed with their work. From start to
+                            finish, the team was professional, communicative, and went above and beyond to ensure that
+                            my website met all of my needs and specifications.</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide__head">
+                            <img src="./img/user2.png" alt="John Martin" class="swiper-slide__foto">
+                            <div class="swiper-slider__info">
+                                <p class="swiper-slider__autor">John Martin</p>
+                                <p class="swiper-slider__role">Restoration Company</p>
+                            </div>
+                            <img src="./img/quote.svg" alt="Quote">
+                        </div>
+                        <p class="swiper-slide__text">The team at Studio.io demonstrated a strong attention to detail
+                            throughout the project. They were diligent in catching any issues or errors and worked
+                            tirelessly to make sure everything was perfect before launching the new site.
+                            <br><br>
+                            Overall, I highly recommend for anyone looking for a reliable, skilled web development team.
+                            Their expertise and commitment to excellence are truly unmatched.
+                        </p>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide__head">
+                            <img src="./img/user1.png" alt="Kathleen Smith" class="swiper-slide__foto">
+
+                            <div class="swiper-slider__info">
+                                <p class="swiper-slider__autor">Kathleen Smith</p>
+                                <p class="swiper-slider__role">Fuel Company</p>
+                            </div>
+                            <img src="./img/quote.svg" alt="Quote">
+                        </div>
+                        <p class="swiper-slide__text">I recently worked with Stud.io on developing a new website for my
+                            business, and I have to say, I am thoroughly impressed with their work. From start to
+                            finish, the team was professional, communicative, and went above and beyond to ensure that
+                            my website met all of my needs and specifications.</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide__head">
+                            <img src="./img/user2.png" alt="John Martin" class="swiper-slide__foto">
+                            <div class="swiper-slider__info">
+                                <p class="swiper-slider__autor">John Martin</p>
+                                <p class="swiper-slider__role">Restoration Company</p>
+                            </div>
+                            <img src="./img/quote.svg" alt="Quote">
+                        </div>
+                        <p class="swiper-slide__text">The team at Studio.io demonstrated a strong attention to detail
+                            throughout the project. They were diligent in catching any issues or errors and worked
+                            tirelessly to make sure everything was perfect before launching the new site.
+                            <br><br>
+                            Overall, I highly recommend for anyone looking for a reliable, skilled web development team.
+                            Their expertise and commitment to excellence are truly unmatched.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="./script/swiper-bundle.min.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
